# Spectrasaurus

./: .gitignore  CMakeLists.txt  README.md  Spec.md
.github/workflows/: build.yml
Presets/: BadHarmonics.spectral  BadVocalIsolation.spectral  BasicBackwardsDisperser.spectral  BasicDisperser.spectral  BassHiHatOnly.spectral  ClapSmearedStereo.spectral  DestroyPitch.spectral  DubKeysHissFeedback.spectral  DubVibeyMultibandDelay.spectral  EmptyPatch.spectral  FeedbackEqsABCD.spectral  GatesABCD.spectral  GatesFeedbackABCD.spectral  GatesPlusDelaysABCD.spectral  HarmonicHumFb.spectral  HeartbeatDownshift.spectral  MakeEverything400Hz.spectral  MetallicSynthDetune.spectral  PingPongDelayish.spectral  PingPongFiltered.spectral  PitchRisingEcho.spectral  RisingFeedback.spectral  ShiftsABCD.spectral  SpectralZapDelay.spectral  SubKickSpaceshipRumble.spectral  SwoopInShot.spectral
Presets/Factory/: BadHarmonics.spectral  BasicBackwardsDisperser.spectral  BasicDisperser.spectral  BassHiHatOnly.spectral  DestroyEverything.spectral  DestroyPitch.spectral  FeedbackEqsABCD.spectral  GatesABCD.spectral  GatesPlusDelaysABCD.spectral  HarshWindyAmbience.spectral  MakeEverything400Hz.spectral  MetallicSynthDetune.spectral  SquashClipper.spectral  SubKickSpaceshipRumble.spectral  (+1 more)
Source/: Bank.cpp  Bank.h  ClipboardMeta.h  DebugLogger.h  DynamicsSnapWindow.cpp  DynamicsSnapWindow.h  PiecewiseFunction.cpp  PiecewiseFunction.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  ShiftSnapWindow.cpp  ShiftSnapWindow.h  SnapWindow.cpp  SnapWindow.h  XYPad.cpp  XYPad.h
